[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/smoke_particles.png" type="Texture" id=1]
[ext_resource path="res://assets/planes/plane_2.png" type="Texture" id=2]
[ext_resource path="res://plane/plane.gd" type="Script" id=3]
[ext_resource path="res://general_purpose/trail/trail.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/font_8px_outlined.fnt" type="BitmapFont" id=5]
[ext_resource path="res://general_purpose/damage_areas/receive_damage_area.gd" type="Script" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.645455 ), 0.0, 0.0, 0, 0, Vector2( 0.701087, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.25
angular_velocity = 500.0
angular_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 0.53
scale_curve = SubResource( 10 )
anim_speed = 1.5
anim_speed_random = 0.25
anim_offset = 0.5
anim_offset_random = 1.0

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "cycle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0.1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 2.23812, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=8]
radius = 20.025

[sub_resource type="CircleShape2D" id=9]
radius = 12.0

[node name="plane" type="Node2D"]
script = ExtResource( 3 )

[node name="rotate" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="plane_particles" type="Particles2D" parent="rotate"]
material = SubResource( 1 )
amount = 100
lifetime = 5.0
speed_scale = 3.0
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="plane_sprite" type="Sprite" parent="rotate"]
texture = ExtResource( 2 )
hframes = 4
__meta__ = {
"_edit_lock_": true
}

[node name="plane_anim" type="AnimationPlayer" parent="rotate/plane_sprite"]
autoplay = "cycle"
anims/RESET = SubResource( 5 )
anims/cycle = SubResource( 6 )

[node name="trailpos" type="Position2D" parent="rotate"]
position = Vector2( 0, 8 )

[node name="trail" parent="rotate/trailpos" instance=ExtResource( 4 )]
width_curve = SubResource( 7 )
default_color = Color( 0.694118, 0.694118, 0.709804, 0.819608 )

[node name="name_node" type="Node2D" parent="."]
z_index = 10
__meta__ = {
"_edit_lock_": true
}

[node name="name" type="Label" parent="name_node"]
margin_left = -88.0
margin_top = -13.0
margin_right = -16.0
margin_bottom = 1.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "jack"
align = 2
uppercase = true

[node name="avoid_area" type="Area2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="avoid_collision" type="CollisionShape2D" parent="avoid_area"]
shape = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="RcvDamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="damage_collision" type="CollisionShape2D" parent="RcvDamageArea"]
shape = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}
